--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -56,6 +56,7 @@
             app:layout_constraintTop_toTopOf="@id/search_find_icon"
             app:layout_constraintBottom_toBottomOf="@id/search_find_icon"
             app:layout_constraintLeft_toRightOf="@id/search_find_icon"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread"/>
 
 
