--- a/app/src/main/res/menu/drawer_main.xml
+++ b/app/src/main/res/menu/drawer_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/drawer_main_search"
             android:icon="@drawable/ic_search_accented_24dp"
-            android:title="Search" />
+            android:title="Search"
+            android:checked="true"/>
         <item
             android:id="@+id/drawer_main_history"
             android:icon="@drawable/ic_history_accented_24dp"
